# yomo-llm-api

./: AGENTS.md  Cargo.toml  README.md  config.template.toml
docs/: otel_tracing.md  tool_merge_and_testing.md
scripts/: verify_otel_trace.sh
src/: agent_loop.rs  config.rs  conn_tool_invoker.rs  context.rs  endpoint.rs  error.rs  lib.rs  llm_api.rs  metadata.rs  mock_get_weather.rs  model_api.rs  openai_client.rs  openai_http_mapping.rs  openai_types.rs  provider.rs  provider_registry.rs  tool_invoker.rs
src/providers/openai/: mapper.rs  mod.rs
